Update test to generate random values